--- a/signUp.html
+++ b/signUp.html
@@ -1,13 +1,13 @@
 <html>
 <head>
   <title>APPTUBE - Registration</title>
-  <link rel="stylesheet" href="another.css">
+  <link rel="stylesheet" href="signUp.css">
 </head>
 <body>
   <div class="registration-container">
-    <div style="text-align: center; margin-bottom: 10px;">
-  <img src="APPSTORE.png" alt="Apptube Logo" style="width: 150px; height: auto; object-fit: contain;">
-</div>
+    <!-- <div style="text-align: center; margin-bottom: 10px;">
+  <img src="logo.png" alt="Apptube Logo" style="width: 150px; height: auto; object-fit: contain;">
+</div> -->
     <div class="logo-container">
       <div class="logo">APPTUBE</div>
       <!-- <h1 class="logo-text">Join APPTUBE</h1> -->
@@ -55,6 +55,6 @@
     </div>
   </div>
 
-  <script src="another.js"></script>
+  <script src="signUp.js"></script>
 </body>
 </html>
