--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
 <body>
   <div class="registration-container">
     <div class="logo-container">
-      <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fd702a41-1fbf-4e24-810d-b86c0ef7e53a.png" alt="AppVerse logo" class="logo" />
-      <h1 class="logo-text">AppVerse</h1>
+      <!-- <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fd702a41-1fbf-4e24-810d-b86c0ef7e53a.png" alt="AppVerse logo" class="logo" /> -->
+      <h1 class="logo-text">Apptube</h1>
       <p class="tagline">Welcome back! Sign in to continue</p>
     </div>
 
@@ -28,19 +28,19 @@
         <div class="error-message" id="passwordError">Please enter your password</div>
       </div>
 
-      <div class="form-group">
-        <div class="remember-me">
+      <!-- <div class="form-group"> -->
+        <!-- <div class="remember-me">
           <input type="checkbox" id="remember" />
-          <label for="remember">Remember me</label>
+          <label for="remember">Remember me</label> 
         </div>
         <a href="#" class="forgot-password">Forgot password?</a>
-      </div>
+      </!<> -->
 
       <button type="submit" class="btn btn-primary">Sign In</button>
     </form>
 
     <div class="login-link">
-      New to AppVerse? <a href="#">Create an account</a>
+      Don't have account? <a href="#">Create an account</a>
     </div>
   </div>
 
