--- a/client/login/login.html
+++ b/client/login/login.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AppVerse - Login</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    /* Minimal fallback font since no external fonts */
+    body {
+      font-family: Arial, sans-serif;
+    }
+  </style>
   <link rel="stylesheet" href="login.css" />
 </head>
 <body>
@@ -18,29 +23,29 @@
     <form id="loginForm">
       <div class="form-group">
         <label for="username">Email or Username</label>
-        <input type="text" id="username" class="form-control" required />
+        <input type="text" id="username" name="username" class="form-control" required />
         <div class="error-message" id="usernameError">Please enter your email or username</div>
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" required />
+        <input type="password" id="password" name="password" class="form-control" required />
         <div class="error-message" id="passwordError">Please enter your password</div>
       </div>
 
-      <!-- <div class="form-group"> -->
-        <!-- <div class="remember-me">
-          <input type="checkbox" id="remember" />
+      <!-- <div class="form-group">
+        <div class="remember-me">
+          <input type="checkbox" id="remember" name="remember" />
           <label for="remember">Remember me</label> 
         </div>
         <a href="#" class="forgot-password">Forgot password?</a>
-      </!<> -->
+      </div> -->
 
       <button type="submit" class="btn btn-primary">Sign In</button>
     </form>
 
     <div class="login-link">
-      Don't have account? <a href="#">Create an account</a>
+      Don't have an account? <a href="#">Create an account</a>
     </div>
   </div>
 
