--- a/client/login/login.html
+++ b/client/login/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AppVerse - Login</title>
+  <title>APPTUBE - Login</title>
   <style>
     /* Minimal fallback font since no external fonts */
     body {
