--- a/client/signUp/signUp.html
+++ b/client/signUp/signUp.html
@@ -10,7 +10,7 @@
   <img src="logo.png" alt="Apptube Logo" style="width: 150px; height: auto; object-fit: contain;">
 </div> -->
     <div class="logo-container">
-      <div class="logo">APPTUBE</div>
+      <div class="logo">Apptube</div>
       <!-- <h1 class="logo-text">Join APPTUBE</h1> -->
       <p class="tagline">Explore, discover, and download your favorite apps</p>
     </div>
