--- a/client/login/login.html
+++ b/client/login/login.html
@@ -14,6 +14,7 @@
 <body>
   <div class="registration-container">
     <div class="logo-container">
+      <div class="logo-text">Apptube</div>
       <p class="tagline">Welcome back! Sign in to continue</p>
     </div>
 
