--- a/client/Contact Us/contactUs.html
+++ b/client/Contact Us/contactUs.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us - Apptube</title>
-  <link rel="stylesheet" href="contactUs.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -12,7 +13,7 @@
       <h1>Contact us</h1>
       <p>
         Need to get in touch with us? Either fill out the form with your inquiry or Contact Us on this
-        email <a href="mailto:jenishbhalani18@gmail.com">jenishbhalani18@gmail.com</a>.
+        email <a href="mailto:jenishbhalani188@gmail.com">jenishbhalani18@gmail.com</a>.
       </p>
     </div>
     <div class="right-section">
@@ -30,7 +31,7 @@
 
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email" id="email" required />
+          <input type="email" id="email" placeholder="example@gmail.com" required />
         </div>
 
         <div class="input-group">
@@ -43,6 +44,6 @@
     </div>
   </div>
 
-  <script src="contactUs.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
