--- a/client/signUp/signUp.html
+++ b/client/signUp/signUp.html
@@ -6,8 +6,12 @@
 </head>
 <body>
   <div class="registration-container">
+    <!-- <div style="text-align: center; margin-bottom: 10px;">
+  <img src="logo.png" alt="Apptube Logo" style="width: 150px; height: auto; object-fit: contain;">
+</div> -->
     <div class="logo-container">
       <div class="logo">Apptube</div>
+      <!-- <h1 class="logo-text">Join APPTUBE</h1> -->
       <p class="tagline">Explore, discover, and download your favorite apps</p>
     </div>
 
@@ -27,7 +31,7 @@
 
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" id="email" class="form-control" required>
+        <input type="text" id="email" class="form-control" placeholder="example@gmail.com" required>
         <div class="error-message" id="emailError">Please enter a valid email</div>
       </div>
 
