--- a/client/about Us/aboutUs.html
+++ b/client/about Us/aboutUs.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Us | Apptube</title>
   <link rel="stylesheet" href="aboutUs.css" />
+  <link rel="stylesheet" href="../transition.css">
+<script src="../transition.js" defer></script>
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
@@ -71,29 +75,29 @@
       <h2>Meet the Developers</h2>
       <div class="team-grid">
         <div class="team-card">
-          <img src="dev1.jpg" alt="Jenish Bhalani">
+          <img src="profile.jpg" alt="Jenish Bhalani">
           <h3>Jenish Bhalani</h3>
           <p>Frontend Developer</p>
         </div>
         <div class="team-card">
-          <img src="dev2.jpg" alt="Vasu Kindarkhediya">
+          <img src="profile.jpg" alt="Vasu Kindarkhediya">
           <h3>Vasu Kindarkhediya</h3>
           <p>Backend Developer</p>
         </div>
         <div class="team-card">
-          <img src="dev3.jpg" alt="Ankit Mandaviya">
+          <img src="profile.jpg" alt="Ankit Mandaviya">
           <h3>Ankit Mandaviya</h3>
           <p>Database Engineer</p>
         </div>
         <div class="team-card">
-          <img src="dev4.jpg" alt="Bhaumik Parmar">
+          <img src="profile.jpg" alt="Bhaumik Parmar">
           <h3>Bhaumik Parmar</h3>
           <p>UI/UX Designer</p>
         </div>
         <div class="team-card">
-          <img src="dev5.jpg" alt="Dev Parmar">
+          <img src="profile.jpg" alt="Dev Parmar">
           <h3>Dev Parmar</h3>
-          <p>App Tester</p>
+          <p>App Tester & <br>Storage Manager</p>
         </div>
       </div>
     </section>
