--- a/client/homePage/homePage.html
+++ b/client/homePage/homePage.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Apptube - Home</title>
   <link rel="stylesheet" href="homePage.css" />
+  <link rel="stylesheet" href="../transition.css">
+<script src="../transition.js" defer></script>
+
+
   <link rel="icon" type="image/png" href="logo-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
@@ -106,9 +110,9 @@
           Discover, download, and enjoy the best Windows apps & games with Apptube’s sleek design and lightning-fast experience.
         </p>
         <div class="footerSocial">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/jenish_bhalani18/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
