--- a/client/signUp/signUp.html
+++ b/client/signUp/signUp.html
@@ -3,6 +3,10 @@
   <title>APPTUBE - Registration</title>
   
   <link rel="stylesheet" href="signUp.css">
+  <link rel="stylesheet" href="../transition.css">
+<script src="../transition.js" defer></script>
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
