--- a/client/login/login.html
+++ b/client/login/login.html
@@ -10,6 +10,10 @@
     }
   </style>
   <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="../transition.css">
+<script src="../transition.js" defer></script>
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
