--- a/client/about Us/aboutUs.html
+++ b/client/about Us/aboutUs.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us | Apptube</title>
+  <title>Apptube | About Us</title>
   <link rel="stylesheet" href="aboutUs.css" />
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
 
-
+  <link rel="icon" type="image/png" href="../aboutUs/logo-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
@@ -45,8 +45,14 @@
   <div class="navActions">
     <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
     <a href="../login/login.html" id="loginLink">LogIn</a>
+    <i id="bar" class="fa-solid fa-bars"></i>
   </div>
 </nav>
+
+<!-- Sidebar -->
+<div id="barOptions">
+  <a href="#" id="logoutBtn">Log Out</a>
+</div>
 
   <main class="about-section">
     <section class="intro">
@@ -77,7 +83,9 @@
         <div class="team-card">
           <img src="profile.jpg" alt="Jenish Bhalani">
           <h3>Jenish Bhalani</h3>
-          <p>Frontend Developer</p>
+          <p>Frontend Developer & 
+            <br>Workflow Manager
+          </p>
         </div>
         <div class="team-card">
           <img src="profile.jpg" alt="Vasu Kindarkhediya">
@@ -87,7 +95,7 @@
         <div class="team-card">
           <img src="profile.jpg" alt="Ankit Mandaviya">
           <h3>Ankit Mandaviya</h3>
-          <p>Database Engineer</p>
+          <p>Database Manager</p>
         </div>
         <div class="team-card">
           <img src="profile.jpg" alt="Bhaumik Parmar">
@@ -97,7 +105,7 @@
         <div class="team-card">
           <img src="profile.jpg" alt="Dev Parmar">
           <h3>Dev Parmar</h3>
-          <p>App Tester & <br>Storage Manager</p>
+          <p>App Tester & <br>Storage Organizer</p>
         </div>
       </div>
     </section>
@@ -114,9 +122,9 @@
           Discover, download, and enjoy the best Windows apps & games with Apptube’s sleek design and lightning-fast experience.
         </p>
         <div class="footerSocial">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/jenish_bhalani18/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
