--- a/client/knowMore/knowMore.html
+++ b/client/knowMore/knowMore.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Know More - Apptube</title>
+  <title>Apptube | Know More</title>
   <link rel="stylesheet" href="knowMore.css" />
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
-
-
-
+  <link rel="icon" type="image/png" href="../knowMore/logo-removebg-preview.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
 <!-- NAVIGATION -->
@@ -35,8 +34,19 @@
   <div class="navActions">
     <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
     <a href="../login/login.html" id="loginLink">LogIn</a>
+    <i id="bar" class="fa-solid fa-bars"></i>
   </div>
 </nav>
+
+<!-- Sidebar -->
+<div id="barOptions">
+  <a href="#" id="logoutBtn">Log Out</a>
+</div>
+
+<!-- Sidebar -->
+<div id="barOptions">
+  <a href="#" id="logoutBtn">Log Out</a>
+</div>
 
 <!-- Active link highlighting -->
 <script>
@@ -65,9 +75,9 @@
         Discover, download, and enjoy the best Windows apps & games with Apptube’s sleek design and fast experience.
       </p>
       <div class="footerSocial">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/jenish_bhalani18/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
