--- a/client/games/games.html
+++ b/client/games/games.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Apptube - Apps</title>
+  <title>Apptube | Games</title>
   <link rel="stylesheet" href="games.css" />
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
 
 
-  <link rel="icon" type="image/png" href="../homepage/logo-removebg-preview.png" />
+  <link rel="icon" type="image/png" href="../games/logo-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
@@ -26,32 +26,42 @@
 
   <!-- NAVIGATION -->
   <nav>
-    <div class="navLogo">
-      <img src="../homepage/logo-removebg-preview.png" alt="Logo" /> 
-      <h1 class="navTitle">Apptube</h1>
-    </div>
+  <div class="navLogo">
+    <img src="logo-removebg-preview.png" alt="Logo" /> 
+    <h1 class="navTitle">Apptube</h1>
+  </div>
 
-    <div class="navSearch">
-      <input type="text" id="search" class="search" placeholder="Search apps or games..." />
-    </div>
+  <div class="navSearch">
+    <input type="text" id="search" class="search" placeholder="Search apps or games..." />
+  </div>
 
-    <ul class="navLinks">
-      <li><a href="../homepage/homePage.html">Home</a></li>
-      <li><a href="../apps/apps.html">Apps</a></li>
-      <li><a href="../games/games.html">Games</a></li>
-      <li><a href="../categories/categories.html">Category</a></li>
-      <li><a href="../contact Us/contactUs.html">Contact</a></li>
-      <li><a href="../about Us/aboutUs.html">About Us</a></li>
-    </ul>
-    <div class="navActions">
-      <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
-      <a href="../login/login.html" id="loginLink">LogIn</a>
-    </div>
-  </nav>
+  <ul class="navLinks">
+    <li><a href="../homepage/homePage.html">Home</a></li>
+    <li><a href="../apps/apps.html">Apps</a></li>
+    <li><a href="../games/games.html">Games</a></li>
+    <li><a href="../categories/categories.html">Category</a></li>
+    <li><a href="../contact Us/contactUs.html">Contact</a></li>
+    <li><a href="../about Us/aboutUs.html">About Us</a></li>
+  </ul>
+
+  <div class="navActions">
+    <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
+    <a href="../login/login.html" id="loginLink">LogIn</a>
+    <i id="bar" class="fa-solid fa-bars"></i>
+  </div>
+</nav>
+
+<!-- Sidebar -->
+<div id="barOptions">
+  <a href="#" id="logoutBtn">Log Out</a>
+</div>
 
   <!-- APP CARDS SECTION -->
+   <div class="header">
+    <h1>Games</h1>
+   </div>
+  
   <main id="appsSection" class="appsGrid"></main>
-
   <!-- FOOTER -->
   <footer class="footer">
     <div class="footerContainer">
@@ -61,9 +71,9 @@
           Discover, download, and enjoy the best Windows apps & games with Apptube’s sleek design and lightning-fast experience.
         </p>
         <div class="footerSocial">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/apptubeofficial05/>"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
