--- a/client/homePage/homePage.html
+++ b/client/homePage/homePage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Apptube - Home</title>
+  <title>Apptube | Home</title>
   <link rel="stylesheet" href="homePage.css" />
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
@@ -25,33 +25,37 @@
 <body>
 
   <!-- NAVIGATION -->
-  <nav>
-    <div class="navLogo">
-      <img src="logo-removebg-preview.png" alt="Logo" /> 
-      <h1 class="navTitle">Apptube</h1></div>
+<nav>
+  <div class="navLogo">
+    <img src="logo-removebg-preview.png" alt="Logo" /> 
+    <h1 class="navTitle">Apptube</h1>
+  </div>
 
-    <div class="navSearch">
-      <input type="text" id="search" class="search" placeholder="Search apps or games..." />
-    </div>
+  <div class="navSearch">
+    <input type="text" id="search" class="search" placeholder="Search apps or games..." />
+  </div>
 
-    <ul class="navLinks">
-      <li><a href="../homepage/homePage.html">Home</a></li>
-      <li><a href="../apps/apps.html">Apps</a></li>
-      <li><a href="../games/games.html">Games</a></li>
-      <li><a href="../categories/categories.html">Category</a></li>
+  <ul class="navLinks">
+    <li><a href="../homepage/homePage.html">Home</a></li>
+    <li><a href="../apps/apps.html">Apps</a></li>
+    <li><a href="../games/games.html">Games</a></li>
+    <li><a href="../categories/categories.html">Category</a></li>
+    <li><a href="../contact Us/contactUs.html">Contact</a></li>
+    <li><a href="../about Us/aboutUs.html">About Us</a></li>
+  </ul>
 
-      <li><a href="../contact Us/contactUs.html">Contact</a></li>
-      <li><a href="../about Us/aboutUs.html">About Us</a></li>
-    </ul>
-    <div class="navActions">
-      <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
-      <a href="../login/login.html" id="loginLink">LogIn</a>
-    </div>
+  <div class="navActions">
+    <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
+    <a href="../login/login.html" id="loginLink">LogIn</a>
+    <i id="bar" class="fa-solid fa-bars"></i>
+  </div>
+</nav>
 
-  </nav>
-
+<!-- Sidebar -->
+<div id="barOptions">
+  <a href="#" id="logoutBtn">Log Out</a>
+</div>
   
-
   <!-- BANNER SECTION -->
 
   <div class="heroBanner">
@@ -65,6 +69,10 @@
 
 
   <!-- APP CARDS SECTION -->
+   <div class="header">
+    <h1>All Apps & Games</h1>
+   </div>
+
   <main id="appsSection" class="appsGrid">
     <div class="appsContainer">
       <div class="appImage">
@@ -146,9 +154,9 @@
       <!-- Support Section -->
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="#">Help Center</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
       </div>
 
     </div>
@@ -159,6 +167,6 @@
     </div>
   </footer>
 
-  <script src="../homePage.js" defer></script>
+  <script src="homePage.js" defer></script>
 </body>
 </html>
