--- a/client/login/login.html
+++ b/client/login/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>APPTUBE - Login</title>
+  <title>Apptube | Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -12,8 +12,7 @@
   <link rel="stylesheet" href="login.css" />
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
-
-
+  <link rel="icon" type="image/png" href="../login/logo-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
@@ -30,29 +29,36 @@
 
   <!-- NAVIGATION -->
   <nav>
-    <div class="navLogo">
-      <img src="logo-removebg-preview.png" alt="Logo" /> 
-      <h1 class="navTitle">Apptube</h1></div>
+  <div class="navLogo">
+    <img src="logo-removebg-preview.png" alt="Logo" /> 
+    <h1 class="navTitle">Apptube</h1>
+  </div>
 
-    <div class="navSearch">
-      <input type="text" id="search" class="search" placeholder="Search apps or games..." />
-    </div>
+  <div class="navSearch">
+    <input type="text" id="search" class="search" placeholder="Search apps or games..." />
+  </div>
 
-    <ul class="navLinks">
-      <li><a href="../homepage/homePage.html">Home</a></li>
-      <li><a href="../apps/apps.html">Apps</a></li>
-      <li><a href="../games/games.html">Games</a></li>
-      <li><a href="../categories/categories.html">Category</a></li>
+  <ul class="navLinks">
+    <li><a href="../homepage/homePage.html">Home</a></li>
+    <li><a href="../apps/apps.html">Apps</a></li>
+    <li><a href="../games/games.html">Games</a></li>
+    <li><a href="../categories/categories.html">Category</a></li>
+    <li><a href="../contact Us/contactUs.html">Contact</a></li>
+    <li><a href="../about Us/aboutUs.html">About Us</a></li>
+  </ul>
 
-      <li><a href="../contact Us/contactUs.html">Contact</a></li>
-      <li><a href="../about Us/aboutUs.html">About Us</a></li>
-    </ul>
-    <div class="navActions">
-      <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
-      <a href="../login/login.html" id="loginLink">LogIn</a>
-    </div>
+  <div class="navActions">
+    <a href="../signUp/signUp.html" id="signupBtn">SignUp</a>
+    <a href="../login/login.html" id="loginLink">LogIn</a>
+    <i id="bar" class="fa-solid fa-bars"></i>
+  </div>
+</nav>
 
-  </nav>
+<!-- Sidebar -->
+<div id="barOptions">
+  <a href="#" id="logoutBtn">Log Out</a>
+</div>
+
 <main>
   <div class="registration-container">
     <div class="logo-container">
@@ -77,7 +83,7 @@
     </form>
 
     <div class="login-link">
-      Don't have an account? <a href="#">Create an account</a>
+      Don't have an account? <a href="../signUp/signUp.html">SignUp</a>
     </div>
   </div>
 </main>
@@ -92,9 +98,9 @@
           Discover, download, and enjoy the best Windows apps & games with Apptube’s sleek design and lightning-fast experience.
         </p>
         <div class="footerSocial">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/jenish_bhalani18/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
