--- a/client/Shopping/Shopping.html
+++ b/client/Shopping/Shopping.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Apptube | Home</title>
-  <link rel="stylesheet" href="homePage.css" />
+  <title>Apptube | Shopping</title>
+  <link rel="stylesheet" href="Shopping.css" />
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
 
 
-  <link rel="icon" type="image/png" href="logo-removebg-preview.png" />
+  <link rel="icon" type="image/png" href="../apps/logo-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
@@ -25,7 +25,7 @@
 <body>
 
   <!-- NAVIGATION -->
-<nav>
+  <nav>
   <div class="navLogo">
     <img src="logo-removebg-preview.png" alt="Logo" /> 
     <h1 class="navTitle">Apptube</h1>
@@ -55,63 +55,17 @@
 <div id="barOptions">
   <a href="#" id="logoutBtn">Log Out</a>
 </div>
-  
-  <!-- BANNER SECTION -->
 
-  <div class="heroBanner">
-    <div class="bannerBg"></div>
-    <div class="bannerContent">
-      <h1>Discover Amazing Apps & Games</h1>
-      <p>Apptube is your one-stop platform to explore, download, and enjoy high-quality Windows desktop applications and games.</p>
-      <a href="#appsSection"><button class="exploreBtn">Explore Now</button></a>
-    </div>
-  </div>
-
+<div class="header">
+    <h1>Shopping</h1>
+</div>
 
   <!-- APP CARDS SECTION -->
-   <div class="header">
-    <h1>Top Apps & Games</h1>
-   </div>
-
-  <main id="appsSection" class="appsGrid">
-    <div class="appsContainer">
-      <div class="appImage">
-        <img src="TypeFasterPortable_128.png" alt="TypeFaster App" />
-      </div>
-      <div class="appDetails">
-        <p class="freeTag">FREE</p>
-        <p>TypeFaster</p>
-      </div>
-      <div class="appButtons">
-        <a href="#"><button class="downloadBtn">Download</button></a>
-        <a href="../knowMore/knowMore.html"><button class="knowMoreBtn">Know More</button></a>
-      </div>
-    </div>
-
-    <!-- DUPLICATE CARDS (you can keep as many as you need) -->
-    <div class="appsContainer">
-      <div class="appImage">
-        <img src="fs14.jpg" alt="FS14 App" />
-      </div>
-      <div class="appDetails">
-        <p class="freeTag">FREE</p>
-        <p>FS14 - Tractor Simulator</p>
-      </div>
-      <div class="appButtons">
-        <a href="#"><button class="downloadBtn">Download</button></a>
-        <a href="#"><button class="knowMoreBtn">Know More</button></a>
-      </div>
-    </div>
-
-
-    <!-- Add more apps similarly -->
-  </main>
+  <main id="appsSection" class="appsGrid"></main>
 
   <!-- FOOTER -->
   <footer class="footer">
     <div class="footerContainer">
-
-      <!-- Brand & Description -->
       <div class="footerBrand">
         <h2 class="footerTitle">Apptube</h2>
         <p class="footerDesc">
@@ -120,28 +74,22 @@
         <div class="footerSocial">
           <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/apptubeofficial05/>"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
-
-      <!-- Apps Section -->
       <div class="footerLinks">
         <h3>Apps</h3>
         <span class="feature-item">Top Free Apps</span>
         <span class="feature-item">Free Download</span>
         <span class="feature-item">Different Categories</span>
       </div>
-
-      <!-- Games Section -->
       <div class="footerLinks">
         <h3>Games</h3>
         <span class="feature-item">Top Free Games</span>
         <span class="feature-item">Free Download</span>
         <span class="feature-item">Many Types of Games</span>
       </div>
-
-      <!-- Features Section (plain text items) -->
       <div class="footerLinks">
         <h3>Features</h3>
         <span class="feature-item">App Search & Discovery</span>
@@ -150,23 +98,18 @@
         <span class="feature-item">Secure Download Links</span>
         <span class="feature-item">Developer Profiles</span>
       </div>
-
-      <!-- Support Section -->
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="../helpCenter/helpCenter.html">Help Center</a>
-        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
-        <a href="../termsServices/termsServices.html">Terms of Service</a>
+        <a href="#">Help Center</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Service</a>
       </div>
-
     </div>
-
-    <!-- Footer Bottom -->
     <div class="footerBottom">
       <p>&copy; 2025 Apptube. All rights reserved.</p>
     </div>
   </footer>
 
-  <script src="homePage.js" defer></script>
+  <script src="Shopping.js" defer></script>
 </body>
 </html>
