--- a/client/login/login.html
+++ b/client/login/login.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
   <link rel="icon" type="image/png" href="../login/logo-removebg-preview.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+
   <script>
     window.addEventListener("DOMContentLoaded", function () {
       const current = location.pathname.split("/").pop();
@@ -68,9 +69,9 @@
 
     <form id="loginForm">
       <div class="form-group">
-        <label for="username">Email or Username</label>
-        <input type="text" id="username" name="username" class="form-control" required />
-        <div class="error-message" id="usernameError">Please enter your email or username</div>
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" class="form-control" placeholder="example@gmail.com" required />
+        <div class="error-message" id="emailError">Please enter your email</div>
       </div>
 
       <div class="form-group">
@@ -99,7 +100,7 @@
         </p>
         <div class="footerSocial">
           <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a>
           <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
@@ -134,9 +135,9 @@
       <!-- Support Section -->
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="#">Help Center</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
       </div>
 
     </div>
