--- a/client/Contact Us/contactUs.html
+++ b/client/Contact Us/contactUs.html
@@ -9,7 +9,8 @@
 <script src="../transition.js" defer></script>
 
   <link rel="icon" type="image/png" href="../contact Us/logo-removebg-preview.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+
   <script>
     window.addEventListener("DOMContentLoaded", function () {
       const current = location.pathname.split("/").pop();
@@ -83,7 +84,7 @@
 
         <div class="input-group">
           <label for="message">What can we help you with?</label>
-          <textarea id="message" required></textarea>
+          <textarea id="message" placeholder="Write your message here..." required></textarea>
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
@@ -103,7 +104,7 @@
         </p>
         <div class="footerSocial">
           <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a>
           <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
@@ -138,9 +139,9 @@
       <!-- Support Section -->
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="#">Help Center</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
       </div>
 
     </div>
