--- a/client/about Us/aboutUs.html
+++ b/client/about Us/aboutUs.html
@@ -9,7 +9,8 @@
 <script src="../transition.js" defer></script>
 
   <link rel="icon" type="image/png" href="../aboutUs/logo-removebg-preview.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+
   <script>
     window.addEventListener("DOMContentLoaded", function () {
       const current = location.pathname.split("/").pop();
@@ -71,9 +72,9 @@
         <li><strong>Name:</strong> Apptube</li>
         <li><strong>Category:</strong> App Store</li>
         <!-- <li><strong>Technology Stack:</strong> HTML, CSS, JavaScript, Node.js, MySQL</li> -->
-        <li><strong>Main Features:</strong> App discovery,download Apps and Games, clean UI, user-friendly navnotepadigation, contact support</li>
+        <li><strong>Main Features:</strong> App discovery,download Apps and Games, clean UI, user-friendly interface, contact support</li>
         <li><strong>Purpose:</strong> To provide a stylish and simplified platform for finding and downloading apps</li>
-        <li><strong>Target Users:</strong> Tech-savvy users, students, and app enthusiasts</li>
+        <li><strong>Target Users:</strong> Tech-proficient users, students, and app enthusiasts</li>
       </ul>
     </section>
 
@@ -123,7 +124,7 @@
         </p>
         <div class="footerSocial">
           <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a>
           <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
@@ -158,9 +159,9 @@
       <!-- Support Section -->
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="#">Help Center</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
       </div>
 
     </div>
