--- a/client/apps/apps.html
+++ b/client/apps/apps.html
@@ -10,7 +10,7 @@
 
 
   <link rel="icon" type="image/png" href="../apps/logo-removebg-preview.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <script>
     window.addEventListener("DOMContentLoaded", function () {
       const current = location.pathname.split("/").pop();
@@ -73,7 +73,7 @@
         </p>
         <div class="footerSocial">
           <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a>
           <a href="https://www.instagram.com/apptubeofficial05/>"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
@@ -100,9 +100,9 @@
       </div>
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="#">Help Center</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
       </div>
     </div>
     <div class="footerBottom">
