--- a/client/knowMore/knowMore.html
+++ b/client/knowMore/knowMore.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
   <link rel="icon" type="image/png" href="../knowMore/logo-removebg-preview.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 </head>
 <body>
 <!-- NAVIGATION -->
@@ -71,7 +71,7 @@
       </p>
       <div class="footerSocial">
         <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
@@ -106,9 +106,9 @@
     <!-- Support Section -->
     <div class="footerLinks">
       <h3>Support</h3>
-      <a href="#">Help Center</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Service</a>
+      <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
     </div>
 
   </div>
