--- a/client/signUp/signUp.html
+++ b/client/signUp/signUp.html
@@ -7,7 +7,8 @@
 <script src="../transition.js" defer></script>
 
   <link rel="icon" type="image/png" href="../signUp/logo-removebg-preview.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+
   <script>
     window.addEventListener("DOMContentLoaded", function () {
       const current = location.pathname.split("/").pop();
@@ -82,14 +83,14 @@
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control">
+        <input type="password" id="password" class="form-control" required>
        
         <div class="error-message" id="passwordError">Password must be at least 8 characters</div>
       </div>
 
       <div class="form-group">
         <label for="confirmPassword">Confirm Password</label>
-        <input type="password" id="confirmPassword" class="form-control">
+        <input type="password" id="confirmPassword" class="form-control" required>
         <div class="error-message" id="confirmPasswordError">Passwords do not match</div>
       </div>
 
@@ -114,7 +115,7 @@
         </p>
         <div class="footerSocial">
           <a href="https://www.facebook.com/profile.php?id=61579350813671"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a>
           <a href="https://www.instagram.com/apptubeofficial05/"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
@@ -149,9 +150,9 @@
       <!-- Support Section -->
       <div class="footerLinks">
         <h3>Support</h3>
-        <a href="#">Help Center</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="../helpCenter/helpCenter.html">Help Center</a>
+        <a href="../privacyPolicy/privacyPolicy.html">Privacy Policy</a>
+        <a href="../termsServices/termsServices.html">Terms of Service</a>
       </div>
 
     </div>
