--- a/vasu github/categories.html
+++ b/vasu github/categories.html
@@ -126,3 +126,6 @@
 <script src="../relativejs/logout.js"></script>
 </body>
 </html>
+
+ <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a> //x link
+
