--- a/vasu github/categories.html
+++ b/vasu github/categories.html
@@ -128,7 +128,8 @@
 </html>
 
  <a href="https://x.com/Apptube05"><i class="fab fa-x-twitter"></i></a> //x link
-www.youtube.com/@apptube-o8l
+https://www.youtube.com/@apptube-o8l //youtube link
+
 
 
 
